# failure-prediction

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile_112  README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: validate-dev-container.yml  validate-devcontainer.yml
code/octo/: Dockerfile  README.md  evaluate.sh  finetune.sh  requirements.txt
code/octo/examples/: 02_finetune_new_observation_action.py  zeyu_02_finetune_new_observation_action.py
code/octo/scripts/: finetune.py
code/octo/tests/: debug_config.py
code/openvla/vla-scripts/: finetune.py
code/openvla/wandb/: latest-run
code/rlds_dataset_builder-main/: README.md
code/rlds_dataset_builder-main/example_dataset_bridge/: create_example_data.py  example_dataset_dataset_builder.py
code/rlds_dataset_builder-main/zeyu_example_dataset/: zeyu_create_example_data.py  zeyu_example_dataset_dataset_builder.py
code/sam2-realtime/: Dockerfile  README.md  setup.py
code/sam2-realtime/sam2/: __init__.py  icp_2d.py  icp_3d.py  rajas_3d_sam2_video_inference.py  rajas_sam2_video_inference.py  sam2_data_collection_2rtsp.py  sam2_data_collection_2views.py  test_2d_icp.py  trial.py  visualize_2d_icp.py  visualize_3d_icp.py  zeyu_sam2_data_collection.py  zeyu_sam2_video_inference.py  zeyu_sam2_video_risk_inference.py
code/simple_model/: Dockerfile  README.md  evaluate.py  inference.py  inference.sh  main.py  main_basic.py  main_multimodal.py  main_single_modal.py  main_split_camdata.py  main_two_agents.py  main_two_agents_loading2.py  model_transfer.py  requirements.txt  resnest_models_multimodal.py  resnet_models.py
code/simple_model/CPP_Inference/: CMakeLists.txt  risk_inference.cpp
code/simulation/: Dockerfile  README.md  adjust_mass_center.py  ball_test.py  cube_test.py  main.py  requirements.txt  run_simulation.sh  traj.txt  update_config.py  update_xml.py
code/simulation/demo/: common_functions.py  cube_test.py  cube_test_trajectory.py  cube_test_trajectory_camera.py  cube_trajectory.txt  data_labeling.py  data_processor.py  data_read.py  historical_backtracking.py  historical_backtracking_bin.py  mujoco_base.py  mujoco_test_rajas.py  object_properties.json  simulation_config.json
code/ur5-scripts/: Dockerfile  README.md  backup_gripper_io.py  backup_gripper_test_script_serialcom.py  backup_pyRobotiqGripper.py  camera_view.py  depth_auto_calibration_example.py  eye_on_base_calibration.py  get_robot_pose.py  get_set_joint_angle.py  get_set_two_robot_joints.py  modbus_example.py  python-urx_README.md  servoj_example.py  simultaneous_motion.py  test_robotiq_gripper.py  traj.txt  urx_example.py  verify_camera_calibration.py  zeyu_get_set_robot_replay.py
code/ur5_scripts/: .gitignore  backup_gripper.py  get_robot_pose.py  get_robot_tool_tip_pos.py  get_set_two_robot_joints.py  opencv_viewer_example.py  test_robotiq_gripper.py  traj_20250209.txt  traj_20250409.txt  zeyu_get_set_robot_replay.py  zeyu_record_pc_rgb.py
scripts/: build.sh  nuke-docker.sh  purge-envs.sh  setup-envs.sh
simulation/: __init__.py  main.py
simulation/src/: __init__.py  constants.py  ik_solver.py  logger.py  planner.py  simulation.py
(+66 files in other folders)
